--- a/html5_basics/presentation_ru.html
+++ b/html5_basics/presentation_ru.html
@@ -78,6 +78,7 @@
                         <i>W3C</i> &gt; XHTML 2.0
                     </p>
                     <p class="fragment"><i>WHATWG</i> &gt; HTML 5</p>
+                    <img src="files/w3cvswhatwg.jpg" alt="">
                 </section>
 
                 <section>
@@ -101,6 +102,7 @@
                         <p>
                             <a href="https://developer.mozilla.org/en-US/docs/HTML/HTML5">https://developer.mozilla.org/en-US/docs/HTML/HTML5</a>
                         </p>
+                        <img src="files/rubic.png" alt="">
                     </section>
                     <section>
                         <h2>Semantics & Markup</h2>
@@ -209,6 +211,7 @@
 &lt;article&gt;&lt;article&gt;
 &lt;article&gt;&lt;article&gt;
 &lt;footer&gt;&lt;footer&gt;</code></pre>
+                    <img src="files/done.jpg" alt="" class="fragment">
                 </section>
 
                 <section>
@@ -291,6 +294,7 @@
                     <p>document.createElement('footer');</p>
                     <p>...</p>
                     <p><a href="https://github.com/aFarkas/html5shiv/">https://github.com/aFarkas/html5shiv/</a></p>
+                    <img src="files/ie.jpg" alt="">
                 </section>
 
                 <section>
@@ -311,6 +315,10 @@
                             <li>range</li>
                             <li>color</li>
                         </ul>
+                    </section>
+                    <section>
+                        <h2>date</h2>
+                        <img src="files/date.png" alt="">
                     </section>
                     <section>
                         <h2>tel</h2>
@@ -377,7 +385,8 @@
                 </section>
 
                 <section>
-                    
+                    <h2>Flash vs. HTML5</h2>
+                    <img src="files/flashvshtml5.jpg" alt="">
                 </section>
 
                 <section>
