--- a/html5_basics/presentation_ru.html
+++ b/html5_basics/presentation_ru.html
@@ -412,7 +412,24 @@
                 </section>
 
                 <section>
-                    <h2>Canvas</h2>
+                    <section>
+                        <h2>Canvas</h2>
+                        <pre><code style="font-size: 20px; margin-top: 20px;">var canvas = document.getElementById('sample');
+var context = canvas.getContext('2d');
+context.fillStyle = '#FF0000';
+context.fillRect(0, 0, 150, 75);</code></pre>
+                    </section>
+                    <section>
+                        <h2>Canvas</h2>
+                        <p><a href="http://alteredqualia.com/canvasmol/#DNA">http://alteredqualia.com/canvasmol/#DNA</a></p>
+                        <p><a href="http://sta.sh/muro/">http://sta.sh/muro/</a></p>
+                        <p><a href="http://lights.elliegoulding.com/">http://lights.elliegoulding.com/</a></p>
+                        <p><a href="http://canvasrider.com/">http://canvasrider.com/</a></p>
+                    </section>
+                </section>
+
+                <section>
+                    <h2></h2>
                 </section>
 
                 <section>
