--- a/html5_basics/presentation_ru.html
+++ b/html5_basics/presentation_ru.html
@@ -429,7 +429,50 @@ context.fillRect(0, 0, 150, 75);</code></pre>
                 </section>
 
                 <section>
-                    <h2></h2>
+                    <h2>CSS3</h2>
+                    <ul>
+                        <li>border-radius, border-image, box-shadow</li>
+                        <li>text-shadow, word-wrap, font-face</li>
+                        <li>resize, box-sizing, column-width</li>
+                        <li>background-size, background</li>
+                        <li>font-face, media queries</li>
+                    </ul>
+                </section>
+
+                <section>
+                    <section>
+                        <h2>font-face</h2>
+                        <pre><code style="font-size: 20px; margin-top: 20px;">@font-face {
+    font-family: "JournalRegular";
+    src: url("journal-webfont.eot");
+    src: url("journal-webfont.eot?#iefix") format("embedded-opentype"),
+         url("journal-webfont.woff") format("woff"),
+         url("journal-webfont.ttf") format("truetype"),
+         url("journal-webfont.svg#JournalRegular") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}</code></pre>
+                    </section>
+                    <section>
+                        <h2>font-face</h2>
+                        <ul>
+                            <li>много весит</li>
+                            <li>странное поведение во время загрузки</li>
+                            <li>баги</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>font-face</h2>
+                        <p><a href="http://www.fontsquirrel.com/fontface/generator">Generator</a></p>
+                        <p><a href="http://fonts.philip.html5.org/">Optimizer</a></p>
+                        <p><a href="http://www.google.com/webfonts">http://www.google.com/webfonts</a></p>
+                    </section>
+                </section>
+
+                <section>
+                    <section>
+                        <h2>Media queries</h2>
+                    </section>
                 </section>
 
                 <section>
