--- a/html5_basics/presentation_ru.html
+++ b/html5_basics/presentation_ru.html
@@ -457,6 +457,7 @@ context.fillRect(0, 0, 150, 75);</code></pre>
                         <h2>font-face</h2>
                         <ul>
                             <li>много весит</li>
+                            <li>лицензия</li>
                             <li>странное поведение во время загрузки</li>
                             <li>баги</li>
                         </ul>
@@ -472,8 +473,28 @@ context.fillRect(0, 0, 150, 75);</code></pre>
                 <section>
                     <section>
                         <h2>Media queries</h2>
+                        <pre><code>@media screen {
+    * { 
+        font-family: sans-serif; 
+    }
+}</code></pre>
+                        <pre class="fragment"><code>@media screen and (min-width: 500px) { ... }</code></pre>
+                    </section>
+                    <section>
+                        <h2>Media queries</h2>
+                        <pre><code>@media all and (orientation: portrait) { ... }
+@media screen and (color) { ... }
+@media screen and (min-width: 600px) and (max-width: 900px) { ... }
+</code></pre>
+                    </section>
+                    <section>
+                        <h2>Media queries</h2>
+                        <p><a href="http://mediaqueri.es/">http://mediaqueri.es/</a></p>
+                        <p><a href="http://colly.com/">http://colly.com/</a></p>
                     </section>
                 </section>
+
+                
 
                 <section>
                     <h1>Спасибо!</h1>
