--- a/using_jquery/presentation_en.html
+++ b/using_jquery/presentation_en.html
@@ -362,7 +362,7 @@ $('#id').toggable();</pre>
             <article>
                 <h1>Thanks!</h1>
                 <ul>
-                    <li>email: <a href="mailto:e.leychenok@gmail.com">e.leychenok@gmail.com</a></li>
+                    <li>email: <a href="mailto:e.leychenok@itransition.com">e.leychenok@itransition.com</a></li>
                     <li>skype: <a href="callto://e.leychenok">e.leychenok</a></li>
                     <li>twitter: <a href="https://twitter.com/yleichanok">https://twitter.com/yleichanok</a></li>
                 </ul>
