Added reading section.

--- a/using_jquery/presentation_en.html
+++ b/using_jquery/presentation_en.html
@@ -359,6 +359,17 @@ $('#id').toggable();</pre>
                     <li>Ask questions:)</li>
                 </ul>
             </article>
+			<article>
+				<h3>Reading</h3>
+				<ul>
+					<li><a href="http://api.jquery.com/">Documentation</a></li>
+					<li><a href="http://code.jquery.com/jquery-1.8.3.js">Source code</a></li>
+					<li><a href="http://intranet2/SiteDirectory/WD/Books/Front-end/JavaScript/Cody%20Lindley%20-%20jQuery%20Cookbook.pdf">Cody Lindley - jQuery Cookbook</a></li>
+					<li><a href="http://ontwik.com/javascript/jquery-performance-tips-and-tricks/">Addy Osmani - jQuery Proven Performance Tips</a></li>
+					<li><a href="http://24ways.org/2011/your-jquery-now-with-less-suck/">Scott Kosman - Your jQuery: Now With 67% Less Suck</a></li>
+					<li><a href="http://www.learningjquery.com/">Learning jQuery</a></li>
+				</ul>
+			</article>
             <article>
                 <h1>Thanks!</h1>
                 <ul>
