--- a/using_jquery/presentation_ru.html
+++ b/using_jquery/presentation_ru.html
@@ -12,9 +12,9 @@
     -->
 <html>
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8">
         <title>Используем jQuery</title>
-        <link rel="stylesheet" type="text/css" href="lib/styles.css" />
+        <link rel="stylesheet" type="text/css" href="lib/styles.css">
     </head>
     <body style="display: none;">
         <section class="slides layout-regular template-io2011">
@@ -359,6 +359,17 @@ $('#id').toggable();</pre>
                     <li>Задаём вопросы:)</li>
                 </ul>
             </article>
+			<article>
+				<h3>Что почитать</h3>
+				<ul>
+					<li><a href="http://api.jquery.com/">Документация</a></li>
+					<li><a href="http://code.jquery.com/jquery-1.8.3.js">Исходный код</a></li>
+					<li><a href="http://intranet2/SiteDirectory/WD/Books/Front-end/JavaScript/Cody%20Lindley%20-%20jQuery%20Cookbook.pdf">Cody Lindley - jQuery Cookbook</a></li>
+					<li><a href="http://ontwik.com/javascript/jquery-performance-tips-and-tricks/">Addy Osmani - jQuery Proven Performance Tips</a></li>
+					<li><a href="http://24ways.org/2011/your-jquery-now-with-less-suck/">Scott Kosman - Your jQuery: Now With 67% Less Suck</a></li>
+					<li><a href="http://www.learningjquery.com/">Learning jQuery</a></li>
+				</ul>
+			</article>
             <article>
                 <h1>Спасибо за внимание!</h1>
                 <ul>
