Added reading section.

--- a/html5_basics/presentation_ru.html
+++ b/html5_basics/presentation_ru.html
@@ -634,6 +634,18 @@ window.addEventListener('popstate', function() {
 });</code></pre>
                     <p>Поддержка: IE10+, FF4+, Chrome5+, Safari5+, Opera11.5+</p>
                 </section>
+				
+				<section>
+					<h2>Что почитать</h2>
+					<ul>
+						<li><a href="http://intranet2/SiteDirectory/WD/Books/Front-end/HTML5,%20CSS3/Bruce%20Lawson,%20Remy%20Sharp%20-%20Introducing%20HTML5%20-%202010.pdf">Bruce Lawson, Remy Sharp - Introducing HTML5</a></li>
+						<li><a href="http://intranet2/SiteDirectory/WD/Books/Front-end/HTML5,%20CSS3/Alexis%20Goldstein%20-%20HTML5%20and%20CSS3%20in%20The%20Real%20World.pdf">Alexis Goldstein - HTML5 and CSS3 in The Real World</a></li>
+						<li><a href="https://developer.mozilla.org/en-US/docs/HTML/HTML5">MDN</a></li>
+						<li><a href="http://net.tutsplus.com/tutorials/html-css-techniques/25-html5-features-tips-and-techniques-you-must-know/">Jeffrey Way - 28 New HTML5 Features you Must Know</a></li>
+						<li><a href="http://slides.html5rocks.com/">HTML5 Slides</a></li>
+						<li><a href="http://www.html5rocks.com/">HTML5 Rocks</a></li>
+					</ul>
+				</section>
 
                 <section>
                     <h1>Спасибо!</h1>
