Added new slides.

--- a/using_jquery/presentation_ru.html
+++ b/using_jquery/presentation_ru.html
@@ -22,7 +22,7 @@
                 <img src="files/jquery-logo.png" alt="jQuery" />
                 <h1>Используем jQuery</h1>
                 <p>Евгений Лейченок</p>
-                <p>19 октября 2012</p>
+                <p>30 января 2013</p>
             </article>
             <article>
                 <ul>
@@ -32,6 +32,8 @@
                     <li>Всё о событиях</li>
                     <li>Ajax</li>
                     <li>Плюшки и полезности</li>
+                    <li>Бонус #1</li>
+                    <li>Бонус #2</li>
                 </ul>
             </article>
             <article>
@@ -77,7 +79,7 @@
             </article>
             <article>
                 <h3>DOM & Sizzle</h3>
-                <p>Основан на DOM API и работает в разных браузераз в зависимости от поддержки основных методов.</p>
+                <p>Основан на DOM API и работает в разных браузерах в зависимости от поддержки основных методов.</p>
                 <p>Разбор селекторов происходит справа налево, как в CSS.</p>
                 <section>
                     <pre>
@@ -363,13 +365,59 @@ $('#id').toggable();</pre>
 				<h3>Что почитать</h3>
 				<ul>
 					<li><a href="http://api.jquery.com/">Документация</a></li>
-					<li><a href="http://code.jquery.com/jquery-1.8.3.js">Исходный код</a></li>
-					<li><a href="http://intranet2/SiteDirectory/WD/Books/Front-end/JavaScript/Cody%20Lindley%20-%20jQuery%20Cookbook.pdf">Cody Lindley - jQuery Cookbook</a></li>
+					<li><a href="http://code.jquery.com/jquery-1.9.1.js">Исходный код</a></li>
+					<li><a href="http://www.amazon.com/jQuery-Cookbook-Animal-Guide-ebook/dp/B0043D2EOU/ref=sr_1_1?ie=UTF8&qid=1361539635&sr=8-1&keywords=cody+linley+jquery">Cody Lindley - jQuery Cookbook</a></li>
 					<li><a href="http://ontwik.com/javascript/jquery-performance-tips-and-tricks/">Addy Osmani - jQuery Proven Performance Tips</a></li>
 					<li><a href="http://24ways.org/2011/your-jquery-now-with-less-suck/">Scott Kosman - Your jQuery: Now With 67% Less Suck</a></li>
 					<li><a href="http://www.learningjquery.com/">Learning jQuery</a></li>
 				</ul>
 			</article>
+            <article>
+                <h3>Бонус #1. Новости из мира jQuery</h3>
+                <ul>
+                    <li>Полное обновление сайтов jQuery</li>
+                    <li>jQuery Plugin Registry</li>
+                    <li>Разделение библиотеки на две параллельных ветки</li>
+                    <li>jQuery Migrate</li>
+                </ul>
+            </article>
+            <article>
+                <h3>jQuery 1.9</h3>
+                <p><a href="http://jquery.com/upgrade-guide/1.9/">Upgrade guide</a></p>
+                <ul>
+                    <li>Рефакторинг</li>
+                    <li>Поддержка старых браузеров</li>
+                    <li>Удалены недокументированные API</li>
+                    <li>Удалены live, die, browser, toggle</li>
+                    <li>Улучшение производительности</li>
+                    <li>...</li>
+                </ul>
+            </article>
+            <article>
+                <h3>jQuery 2.0</h3>
+                <ul>
+                    <li>Убрана поддержка IE до 9 версии</li>
+                    <li>API - такое же как и у 1.9</li>
+                </ul>
+            </article>
+            <article>
+                <h3>jQuery Migrate</h3>
+                <p><a href="https://github.com/jquery/jquery-migrate/">https://github.com/jquery/jquery-migrate/</a></p>
+                <code>
+                    <pre>&lt;script src="jquery-1.9.js"&gt;&lt;/script&gt;
+&lt;script src="jquery-migrate-1.0.0.js"&gt;&lt;/script&gt;</pre>
+                </code>
+            </article>
+            <article>
+                <h3>Бонус #2. 5 самых частых ошибок</h3>
+                <ul>
+                    <li>Использование старой версии</li>
+                    <li>Повторные выборки, отсутствие кэширование</li>
+                    <li>Слишком длинные, сложные и непонятные селекторы</li>
+                    <li>Отсутствие methods chaining</li>
+                    <li>Неправильные работа с событиями</li>
+                </ul>
+            </article>
             <article>
                 <h1>Спасибо за внимание!</h1>
                 <ul>
