--- a/using_jquery/presentation_en.html
+++ b/using_jquery/presentation_en.html
@@ -22,7 +22,7 @@
                 <img src="files/jquery-logo.png" alt="jQuery" />
                 <h1>Using jQuery</h1>
                 <p>Yauheni Leichanok</p>
-                <p>October 19, 2012</p>
+                <p>January 30, 2013</p>
             </article>
             <article>
                 <ul>
@@ -32,6 +32,8 @@
                     <li>Events</li>
                     <li>Ajax</li>
                     <li>Tips and tricks</li>
+                    <li>Bonus #1</li>
+                    <li>Bonus #2</li>
                 </ul>
             </article>
             <article>
@@ -363,13 +365,59 @@ $('#id').toggable();</pre>
 				<h3>Reading</h3>
 				<ul>
 					<li><a href="http://api.jquery.com/">Documentation</a></li>
-					<li><a href="http://code.jquery.com/jquery-1.8.3.js">Source code</a></li>
-					<li><a href="http://intranet2/SiteDirectory/WD/Books/Front-end/JavaScript/Cody%20Lindley%20-%20jQuery%20Cookbook.pdf">Cody Lindley - jQuery Cookbook</a></li>
+					<li><a href="http://code.jquery.com/jquery-1.9.1.js">Source code</a></li>
+					<li><a href="http://www.amazon.com/jQuery-Cookbook-Animal-Guide-ebook/dp/B0043D2EOU/ref=sr_1_1?ie=UTF8&qid=1361539635&sr=8-1&keywords=cody+linley+jquery">Cody Lindley - jQuery Cookbook</a></li>
 					<li><a href="http://ontwik.com/javascript/jquery-performance-tips-and-tricks/">Addy Osmani - jQuery Proven Performance Tips</a></li>
 					<li><a href="http://24ways.org/2011/your-jquery-now-with-less-suck/">Scott Kosman - Your jQuery: Now With 67% Less Suck</a></li>
 					<li><a href="http://www.learningjquery.com/">Learning jQuery</a></li>
 				</ul>
 			</article>
+			<article>
+                <h3>Bonus #1. jQuery news</h3>
+                <ul>
+                    <li>jQuery sites updated</li>
+                    <li>jQuery Plugin Registry</li>
+                    <li>Two branches - 1.9 and 2.0</li>
+                    <li>jQuery Migrate</li>
+                </ul>
+            </article>
+            <article>
+                <h3>jQuery 1.9</h3>
+                <p><a href="http://jquery.com/upgrade-guide/1.9/">Upgrade guide</a></p>
+                <ul>
+                    <li>Refactoring</li>
+                    <li>Old browser support</li>
+                    <li>Removed hidden features API</li>
+                    <li>Removed live, die, browser, toggle</li>
+                    <li>Increased performance</li>
+                    <li>...</li>
+                </ul>
+            </article>
+            <article>
+                <h3>jQuery 2.0</h3>
+                <ul>
+                    <li>Removed support of IE up to 9</li>
+                    <li>API - equal to 1.9</li>
+                </ul>
+            </article>
+            <article>
+                <h3>jQuery Migrate</h3>
+                <p><a href="https://github.com/jquery/jquery-migrate/">https://github.com/jquery/jquery-migrate/</a></p>
+                <code>
+                    <pre>&lt;script src="jquery-1.9.js"&gt;&lt;/script&gt;
+&lt;script src="jquery-migrate-1.0.0.js"&gt;&lt;/script&gt;</pre>
+                </code>
+            </article>
+            <article>
+                <h3>Bonus #2. 5 common mistakes</h3>
+                <ul>
+                    <li>Using old jQuery version</li>
+                    <li>Using same selectors several times, without caching</li>
+                    <li>Too long and complex selectors</li>
+                    <li>No methods chaining</li>
+                    <li>Incorrect events handling</li>
+                </ul>
+            </article>
             <article>
                 <h1>Thanks!</h1>
                 <ul>
