Added slides about components compression.

--- a/fast_websites/index.html
+++ b/fast_websites/index.html
@@ -106,6 +106,50 @@
 			<li>Make AJAX Cacheable</li>
 		</ol>
 	</div></section>
+	<section class="slide"><div>
+		<h2>Сжимаем JavaScript</h2>
+		<ul>
+			<li><a href="http://closure-compiler.appspot.com/home">Closure Compiler Service</a> (advanced mode)</li>
+			<li><a href="http://yui.github.io/yuicompressor/">YUI Compressor</a></li>
+			<li><a href="https://github.com/mishoo/UglifyJS">UglifyJS</a> (javascript)</li>
+			<li><a href="http://dean.edwards.name/packer/">/packer/</a></li>
+			<li><a href="http://requirejs.org/docs/optimization.html">r.js</a> (AMD)</li>
+		</ul>
+	</div></section>
+	<section class="slide"><div>
+		<h2>Сжимаем CSS</h2>
+		<ul>
+			<li><a href="http://yui.github.io/yuicompressor/">YUI Compressor</a></li>
+			<li><a href="http://requirejs.org/docs/optimization.html">r.js</a> (AMD)</li>
+			<li><a href="http://www.cssdrive.com/index.php/main/csscompressor/">CSS Compressor</a> (online)</li>
+			<li><a href="http://www.minifycss.com/css-compressor/">Minify CSS</a> (online)</li>
+			<li><a href="http://iceyboard.no-ip.org/projects/css_compressor">Robson CSS Compressor</a> (online)</li>
+			<li><a href="https://github.com/ded/sqwish">Sqwish</a> (node.js)</li>
+		</ul>
+	</div></section>
+	<section class="slide"><div>
+		<h2>Сжимаем графику</h2>
+		<ul>
+			<li><a href="http://pmt.sourceforge.net/pngcrush/">pngcrush</a>, <a href="http://advsys.net/ken/util/pngout.htm">pngout</a>, <a href="http://optipng.sourceforge.net/">OptiPNG</a>, <a href="http://entropymine.com/imageworsener/">Image Worsener</a></li>
+			<li><a href="http://sylvana.net/jpegcrop/jpegtran/">jpegtran</a>, <a href="http://freecode.com/projects/jpegoptim">jpegoptim</a></li>
+			<li><a href="http://www.lcdf.org/gifsicle/">gifsicle</a></li>
+			<li><a href="http://www.smushit.com/ysmush.it/">Smush.it</a> (online)</li>
+		</ul>
+	</div></section>
+	<section class="slide"><div>
+		<h2>Сжимаем HTML</h2>
+		<ul>
+			<li><a href="https://code.google.com/p/htmlcompressor/">HtmlCompressor</a></li>
+			<li><a href="http://webmarkupmin.codeplex.com/">WebMarkupMin</a> (.NET)</li>
+			<li><a href="https://github.com/kangax/html-minifier">HTML Minifier</a></li>
+		</ul>
+	</div></section>
+	<section class="slide"><div>
+		<h2>Сжимаем шрифты</h2>
+		<ul>
+			<li><a href="http://www.fontsquirrel.com/tools/webfont-generator">Font Squirrel</a></li>
+		</ul>
+	</div></section>
 	<!--
 		To hide progress bar from entire presentation
 		just remove “progress” element.
