Added more performance techniques.

--- a/fast_websites/index.html
+++ b/fast_websites/index.html
@@ -33,6 +33,10 @@
 		#rules h2 {
 			 color: #000;
 		}
+		#tools h2 {
+			color: #FFF;
+			margin-top: 200px;
+		}
 	</style>
 </head>
 <body class="list">
@@ -148,6 +152,30 @@
 		<h2>Сжимаем шрифты</h2>
 		<ul>
 			<li><a href="http://www.fontsquirrel.com/tools/webfont-generator">Font Squirrel</a></li>
+		</ul>
+	</div></section>
+	<section class="slide"><div>
+		<h2>Сжали. Что дальше?</h2>
+		<ul>
+			<li>Lazy loading</li>
+			<li>Deferred parsing</li>
+			<li>Contextual loading <a href="http://www.youtube.com/watch?v=Sx5GJo_14S8">[*]</a></li>
+			<li>Fast JavaScript</li>
+			<li>COMET, Web Sockets</li>
+			<li>CSS Images</li>
+			<li>Fast CSS <a href="http://dl.dropboxusercontent.com/u/39519/talks/cssperf/index.html">[*]</a></li>
+			<li>...</li>
+		</ul>
+	</div></section>
+	<section class="slide cover" id="tools">
+		<h2>Инструменты</h2>
+		<img src="pictures/tools.jpg" alt="">
+	</section>
+	<section class="slide"><div>
+		<h2>А как проверить?</h2>
+		<ul>
+			<li><a href="http://developer.yahoo.com/yslow/">YSlow</a></li>
+			<li><a href="https://developers.google.com/speed/pagespeed/insights_extensions">Page Speed</a></li>
 		</ul>
 	</div></section>
 	<!--
