--- a/fast_websites/index.html
+++ b/fast_websites/index.html
@@ -157,12 +157,12 @@
 	<section class="slide"><div>
 		<h2>Сжали. Что дальше?</h2>
 		<ul>
-			<li>Lazy loading</li>
+			<li>Lazy loading, contextual loading <a href="http://www.youtube.com/watch?v=Sx5GJo_14S8">[*]</a></li>
 			<li>Deferred parsing</li>
-			<li>Contextual loading <a href="http://www.youtube.com/watch?v=Sx5GJo_14S8">[*]</a></li>
 			<li>Fast JavaScript</li>
 			<li>COMET, Web Sockets</li>
-			<li>CSS Images</li>
+			<li>Web Workers</li>
+			<li>CSS images and fonts</li>
 			<li>Fast CSS <a href="http://dl.dropboxusercontent.com/u/39519/talks/cssperf/index.html">[*]</a></li>
 			<li>...</li>
 		</ul>
@@ -172,10 +172,36 @@
 		<img src="pictures/tools.jpg" alt="">
 	</section>
 	<section class="slide"><div>
-		<h2>А как проверить?</h2>
+		<h2>PageSpeed</h2>
+		<img src="pictures/pagespeed.jpg" alt="">
+	</div></section>
+	<section class="slide"><div>
+		<h2>YSlow</h2>
+		<img src="pictures/yslow.jpg" alt="">
+	</div></section>
+	<section class="slide"><div>
+		<h2>Online-инструменты</h2>
 		<ul>
-			<li><a href="http://developer.yahoo.com/yslow/">YSlow</a></li>
-			<li><a href="https://developers.google.com/speed/pagespeed/insights_extensions">Page Speed</a></li>
+			<li><a href="http://tools.pingdom.com/fpt/">Pingdom</a></li>
+			<li><a href="http://gtmetrix.com/">GTmetrix</a></li>
+			<li><a href="http://www.webpagetest.org/">WebPagetest</a></li>
+			<li>Google Analytics</li>
+		</ul>
+	</div></section>
+	<section class="slide"><div>
+		<h2><a href="http://httparchive.org/">HTTP Archive</a></h2>
+		<ul>
+			<li>Текущая статистика</li>
+			<li>История</li>
+			<li>Тренды</li>
+		</ul>
+	</div></section>
+	<section class="slide"><div>
+		<h2>Спасибо!</h2>
+		<ul>
+			<li>email: <a href="mailto:e.leychenok@gmail.com">e.leychenok@gmail.com</a></li>
+			<li>twitter: <a href="https://twitter.com/yleichanok">yleichanok</a></li>
+			<li>skype: <a href="callto:e.leychenok">e.leychenok</a></li>
 		</ul>
 	</div></section>
 	<!--
