--- a/fast_websites/index.html
+++ b/fast_websites/index.html
@@ -120,6 +120,7 @@
 			<li><a href="http://dean.edwards.name/packer/">/packer/</a></li>
 			<li><a href="http://requirejs.org/docs/optimization.html">r.js</a> (AMD)</li>
 		</ul>
+		<p>jQuery 1.9.1 - 240KB -> 91KB -> 33KB</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Сжимаем CSS</h2>
@@ -131,6 +132,7 @@
 			<li><a href="http://iceyboard.no-ip.org/projects/css_compressor">Robson CSS Compressor</a> (online)</li>
 			<li><a href="https://github.com/ded/sqwish">Sqwish</a> (node.js)</li>
 		</ul>
+		<p>Twitter Bootstrap 2.3.2 - 124KB -> 104KB -> 23KB</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Сжимаем графику</h2>
@@ -154,6 +156,7 @@
 		<ul>
 			<li><a href="http://www.fontsquirrel.com/tools/webfont-generator">Font Squirrel</a></li>
 		</ul>
+		<p>Komika Hand (ttf) - 54KB -> 10KB (10 символов)</p>
 	</div></section>
 	<section class="slide"><div>
 		<h2>Сжали. Что дальше?</h2>
